# brandai

./: .gitignore  main.py  pyproject.toml
api/v1/middlewares/: exception_handler.py  logging_middleware.py
api/v1/models/: user.py
api/v1/responses/: success_response.py
api/v1/routes/: __init__.py  auth.py
api/v1/schemas/: auth.py
api/v1/services/: auth.py  github.py
api/v1/utils/: config.py  database.py  dependencies.py  encryption.py  logger.py
