[project]
name = "brandai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=43.0.0",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.40.0",
]
